second scrollbar fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-image: url(/src/assets/tlo.png); 
   background-size: cover; 
   background-repeat: no-repeat;
@@ -9,7 +9,7 @@ body {
 .App {
   min-height: 100vh;
   /* background-color: url(../../assets/tlo.png); */
-  background-color: #52616B; 
+  /* background-color: #52616B;  */
   /* height: 100vh;
   width: 100%; */
 }
@@ -21,7 +21,6 @@ body {
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgb(255, 153, 0);
   padding: 20px;
-  height: 100%;
 }
 
 .box h2 {
@@ -181,4 +180,14 @@ body {
 
 .matchscore {
   padding: 0 10px;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
